[added]: jquery and new bootstrap

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,4 +1,6 @@
 <p>server works!</p>
 <p *ngFor="let item of createRange(5);">
-    {{title}} Hey there
+    {{title}}
 </p>
+<button (click)='myfunc()'>click me</button>
+{{count}}
