--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>{{ title }}</h1>
-<app-server></app-server>
+<div class="container">
+    <h1>{{ title }}</h1>
+    <a routerLink='server'><button class="alert alert-dark">Go To Server</button></a> |
+    <a routerLink=''>Go To Home</a>
+</div>
+<router-outlet></router-outlet>
