[added]:new files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>{{ title }}</h1>
-    <a routerLink='server'><button class="alert alert-dark">Go To Server</button></a> |
-    <a routerLink=''>Go To Home</a>
+    <a routerLink='server'><button class="btn btn-danger">Go To Server</button></a>
+    <a routerLink=''><button class="btn btn-secondary">Go To Home</button></a>
 </div>
 <router-outlet></router-outlet>
