--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,6 +1,8 @@
-<p>server works!</p>
-<p *ngFor="let item of createRange(5);">
-    {{title}}
-</p>
-<button (click)='myfunc()'>click me</button>
-{{count}}
+<div class="container">
+    <p>server works!</p>
+    <p *ngFor="let item of createRange(5);">
+        {{title}}
+    </p>
+    <button class="btn" (click)='myfunc()'>click me</button>
+    {{count}}
+</div>
